# bpla_service

./: .gitignore  Dockerfile  LICENSE  alembic.ini  config.example.toml  docker-compose.example.yml  docker-compose.yml~  justfile  nginx.conf  pyproject.toml
src/bpla_service/: config.py
src/bpla_service.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/bpla_service/adapters/: identity_map.py  providers.py
src/bpla_service/adapters/api/: auth.py  login.py  logout.py  me.py  uav.py  uav_flight.py
src/bpla_service/adapters/data_mappers/: session.py  tables.py  uav.py  uav_flight.py  user.py
src/bpla_service/application/: commitable.py  provider.py
src/bpla_service/application/session/: cryptographer.py  gateway.py
src/bpla_service/application/uav/: gateway.py
src/bpla_service/application/uav_flight/: gateway.py
src/bpla_service/application/user/: gateway.py  password_hasher.py
src/bpla_service/domain/session/: entity.py  errors.py  (+1 more)
src/bpla_service/main/: build_container.py  run.py  web.py  web.py~
src/bpla_service/migrations/: env.py
src/frontend/: index.html
src/frontend/_internal/: api_gateway.js
src/frontend/auth/: index.html  script.js
src/frontend/login/: index.html  script.js
src/frontend/me/: index.html  script.js
src/uav_service/: config.py
src/uav_service.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/uav_service/adapters/: providers.py
src/uav_service/application/: provider.py
src/uav_service/main/: web.py
src/uav_service/migrations/: env.py
(+86 files in other folders)
